updated all streaming examples

--- a/_posts/user_guide_python/geo-streaming.ipynb
+++ b/_posts/user_guide_python/geo-streaming.ipynb
@@ -4,23 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Streaming to a Map and Geo-Streaming"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Welcome to Plotly's Python API User Guide. \n",
     "\n",
     "> Links to the other sections can be found on the User Guide's [homepage](https://plot.ly/python/user-guide#Table-of-Contents:) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr>"
    ]
   },
   {
@@ -32,27 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.9.10'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# (*) Import plotly package\n",
     "import plotly\n",
-    " \n",
-    "# Check plolty version (if not latest, please upgrade)\n",
     "plotly.__version__"
    ]
   },
@@ -65,22 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# (*) To communicate with Plotly's server\n",
     "import plotly.plotly as py  \n",
-    " \n",
-    "# (*) Useful Python/Plotly tools\n",
     "import plotly.tools as tls   \n",
-    " \n",
-    "# (*) Graph objects to piece together plots\n",
     "import plotly.graph_objs as go\n",
-    "\n",
-    "import numpy as np  # (*) numpy for math functions and arrays"
+    "import numpy as np "
    ]
   },
   {
@@ -109,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +133,7 @@
        "{'maxpoints': 3, 'token': u'4lm5a0gsr8'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,15 +151,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +166,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below we'll wrap the relevant code to generate the data stream into a function we call `lets_stream()`.\n",
+    "Below we'll wrap the relevant code to generate the data stream in a function we call `lets_stream()`.\n",
     "We will also follow up with a while loop that will keep our stream up persistently. Notice that the small green dot is the departing airport, the red dot is the arrival airport, and the blue dot is the plane!"
    ]
   },
@@ -344,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -384,10 +343,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning: Your URL has more than 2 parts... are you sure?\n",
-      "  warnings.warn('Your URL has more than 2 parts... are you sure?')\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning:\n",
+      "\n",
+      "Your URL has more than 2 parts... are you sure?\n",
+      "\n"
      ]
     }
    ],
@@ -401,7 +364,7 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'geo-streaming', 'python/geo-streaming//', 'Streaming to a Map',\n",
-    "    'Getting Started with Plotly Streaming',\n",
+    "    'Getting Started with Plotly Streaming', name=\"Geo-Streaming\",\n",
     "    title = 'Geo-Streaming in Plotly',\n",
     "    thumbnail='', language='python',\n",
     "    layout='user-guide', has_thumbnail='false') "
