--- a/_posts/user_guide_python/multiple-trace-streaming.ipynb
+++ b/_posts/user_guide_python/multiple-trace-streaming.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Streaming to Multiple Traces"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Welcome to Plotly's Python API User Guide. \n",
     "\n",
     "> Links to the other sections can be found on the User Guide's [homepage](https://plot.ly/python/user-guide#Table-of-Contents:) "
@@ -32,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -40,19 +33,16 @@
     {
      "data": {
       "text/plain": [
-       "'1.9.9'"
+       "'1.9.10'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# (*) Import plotly package\n",
     "import plotly\n",
-    " \n",
-    "# Check plolty version (if not latest, please upgrade)\n",
     "plotly.__version__"
    ]
   },
@@ -65,22 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# (*) To communicate with Plotly's server\n",
     "import plotly.plotly as py  \n",
-    " \n",
-    "# (*) Useful Python/Plotly tools\n",
     "import plotly.tools as tls   \n",
-    " \n",
-    "# (*) Graph objects to piece together plots\n",
     "import plotly.graph_objs as go\n",
-    "\n",
-    "import numpy as np  # (*) numpy for math functions and arrays"
+    "import numpy as np  "
    ]
   },
   {
@@ -260,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -295,6 +279,20 @@
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning:\n",
+      "\n",
+      "Your URL has more than 2 parts... are you sure?\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -307,7 +305,7 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'multiple-trace-streaming', 'python/multiple-trace-streaming//', 'Streaming to Two Traces',\n",
-    "    'Getting Started with Plotly Streaming',\n",
+    "    'Getting Started with Plotly Streaming', name=\"Streaming to Multiple Traces\",\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
     "    thumbnail='', language='python',\n",
     "    layout='user-guide', has_thumbnail='false') "
