--- a/_posts/user_guide_python/python_streaming.ipynb
+++ b/_posts/user_guide_python/python_streaming.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting Started with Streaming"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Welcome to Plotly's Python API User Guide. \n",
     "\n",
     "> Links to the other sections can be found on the User Guide's [homepage](https://plot.ly/python/user-guide#Table-of-Contents:).\n",
@@ -37,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -45,19 +38,16 @@
     {
      "data": {
       "text/plain": [
-       "'1.9.9'"
+       "'1.9.10'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# (*) Import plotly package\n",
     "import plotly\n",
-    " \n",
-    "# Check plolty version (if not latest, please upgrade)\n",
     "plotly.__version__"
    ]
   },
@@ -70,22 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# (*) To communicate with Plotly's server\n",
+    "import numpy as np \n",
     "import plotly.plotly as py  \n",
-    " \n",
-    "# (*) Useful Python/Plotly tools\n",
     "import plotly.tools as tls   \n",
-    " \n",
-    "# (*) Graph objects to piece together plots\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "import numpy as np  # (*) numpy for math functions and arrays"
+    "import plotly.graph_objs as go"
    ]
   },
   {
@@ -99,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before you start streaming, you're going to need some stream tokens. You will need one stream token for every `trace object` you wish to stream to. Thus if you have two lines that you want to be plotted and streamed to, you're going to require two unique stream tokens. Notice that more tokens can be added via the settings section of your Plotly profile: https://testop.plot.ly/settings/api"
+    "Before you start streaming, you're going to need some [stream tokens](https://plot.ly/settings/api). You will need **one unique stream token for every `trace object` ** you wish to stream to. Thus if you have two traces that you want to plot and stream, you're going to require two unique stream tokens. Notice that more tokens can be added via the settings section of your Plotly profile: https://plot.ly/settings/api"
    ]
   },
   {
@@ -118,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[u'kobzsyl8h4']\n"
+      "[u'a3yx8ev3pg', u'2w50b45d0z', u'cew1sbgo4s', u'nhlxf6ig3d', u'n9s75hv9ic', u'96kd717ava', u'v6f5oeb8ut', u'4lm5a0gsr8', u'0xhh453c6m']\n"
      ]
     }
    ],
@@ -147,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Getting Aquainted with Streaming with an Example"
+    "#### An Example to Get You Started"
    ]
   },
   {
@@ -175,12 +159,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Stream Id Object comes bundled in the `graph_objs` package. We can then call help to see the description of this object:"
+    "The `Stream Id Object` comes bundled in the `graph_objs` package. We can then call help to see the description of this object:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -442,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -452,7 +436,7 @@
     "stream_id = stream_ids[0]\n",
     "\n",
     "# Make instance of stream id object \n",
-    "stream_1 = Stream(\n",
+    "stream_1 = go.Stream(\n",
     "    token=stream_id,  # link stream id to 'token' key\n",
     "    maxpoints=80      # keep a max of 80 pts on screen\n",
     ")"
@@ -463,12 +447,12 @@
    "metadata": {},
    "source": [
     "The `'maxpoints'` key sets the maxiumum number of points to keep on the plotting surface at any given time.\n",
-    "More over, if you want to avoid the use of these Stream Id Objects, you can just create a dictionary with at least the token parameter defined, for example:"
+    "More over, if you want to avoid the use of these `Stream Id Objects`, you can just create a dictionary with at least the token parameter defined, for example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -481,26 +465,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have our stream id object ready to go, we can set up our plot. And we do this in the same way that we would any ohter plot plot, the only thing is that we now have to set the stream parameter in our trace object."
+    "Now that we have our `Stream Id Object` ready to go, we can set up our plot. We do this in the same way that we would any other plot, the only thing is that we now have to set the stream parameter in our trace object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Initialize trace of streaming plot by embedding the unique stream_id\n",
-    "trace1 = Scatter(\n",
+    "trace1 = go.Scatter(\n",
     "    x=[],\n",
     "    y=[],\n",
     "    mode='lines+markers',\n",
     "    stream=stream_1         # (!) embed stream id, 1 per trace\n",
     ")\n",
     "\n",
-    "data = Data([trace1])"
+    "data = go.Data([trace1])"
    ]
   },
   {
@@ -677,7 +661,7 @@
    "metadata": {},
    "source": [
     "You're going to need to set up one of these stream link objects for each trace you wish to stream data to. \n",
-    "Below we'll set one up for the scatter trace we have in our plot. "
+    "<br>Below we'll set one up for the scatter trace we have in our plot. "
    ]
   },
   {
@@ -700,8 +684,7 @@
    "metadata": {},
    "source": [
     "We can now use the Stream Link object `s` in order to `stream` data to our plot. \n",
-    "\n",
-    "As an example, we will send a time stream and some random numbers(for 200 iterations):"
+    "<br>As an example, we will send a time stream and some random numbers:"
    ]
   },
   {
@@ -718,12 +701,11 @@
     " \n",
     "i = 0    # a counter\n",
     "k = 5    # some shape parameter\n",
-    "N = 200  # number of points to be plotted\n",
     "\n",
     "# Delay start of stream by 5 sec (time to switch tabs)\n",
     "time.sleep(5) \n",
     "\n",
-    "for i in range(N):\n",
+    "while True:\n",
     "    \n",
     "    # Current time on x-axis, random numbers on y-axis\n",
     "    x = datetime.datetime.now().strftime('%Y-%m-%d %H:%M:%S.%f')\n",
@@ -744,19 +726,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A stream of data totalling 200 points is sent to Plotly's servers in real-time. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Below you can see an example of the same plot, but streaming indefinitely instead of just 200 points. "
+    "Below you can see an example of the same plot, but streaming indefinitely instead of just 200 points. \n",
+    "<br>Note that the time points correspond to the internal clock on the servers, which is in UTC time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -770,17 +746,14 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Embed never-ending time series streaming plot\n",
-    "tls.embed('streaming-demos','12')\n",
-    "\n",
-    "# Note that the time point correspond to internal clock of the servers, \n",
-    "# that is UTC time."
+    "tls.embed('streaming-demos','12')"
    ]
   },
   {
@@ -788,11 +761,21 @@
    "metadata": {},
    "source": [
     "Anyone can view your streaming graph in real-time. All viewers will see the same data simultaneously (try it! Open up this notebook up in two different browser windows and observer\n",
-    "that the graphs are plotting identical data!).\n",
-    "\n",
-    "Simply put, Plotly's streaming API is awesome!\n",
-    "\n",
-    "In brief: to make a Plotly streaming plot:\n",
+    "that the graphs are plotting identical data!)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summmary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In summary, these are the steps required in order to start streaming to a trace object:\n",
     "\n",
     "1. Make a `stream id object` (`Stream` in the `plotly.graph_objs` module) containing the `streaming token`(which is found in the **settings** of your Plotly account) and the maximum number of points to be keep on screen (which is optional).\n",
     "2. Provide the `stream id object` as the key value for the `stream` attribute in your trace object. \n",
@@ -807,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -841,16 +824,6 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning: Your URL has more than 2 parts... are you sure?\n",
-      "  warnings.warn('Your URL has more than 2 parts... are you sure?')\n"
      ]
     }
    ],
