--- a/_posts/user_guide_python/subplot-streaming.ipynb
+++ b/_posts/user_guide_python/subplot-streaming.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Streaming with Subplots"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Welcome to Plotly's Python API User Guide. \n",
     "\n",
     "> Links to the other sections can be found on the User Guide's [homepage](https://plot.ly/python/user-guide#Table-of-Contents:) "
@@ -49,10 +42,7 @@
     }
    ],
    "source": [
-    "# (*) Import plotly package\n",
     "import plotly\n",
-    " \n",
-    "# Check plolty version (if not latest, please upgrade)\n",
     "plotly.__version__"
    ]
   },
@@ -71,16 +61,10 @@
    },
    "outputs": [],
    "source": [
-    "# (*) To communicate with Plotly's server\n",
     "import plotly.plotly as py  \n",
-    " \n",
-    "# (*) Useful Python/Plotly tools\n",
     "import plotly.tools as tls   \n",
-    " \n",
-    "# (*) Graph objects to piece together plots\n",
     "import plotly.graph_objs as go\n",
-    "\n",
-    "import numpy as np  # (*) numpy for math functions and arrays"
+    "import numpy as np  "
    ]
   },
   {
@@ -283,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -311,6 +295,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+     ]
     }
    ],
    "source": [
@@ -323,7 +314,7 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'subplot-streaming', 'python/subplot-streaming//', 'Streaming Two Types of Plots',\n",
-    "    'Getting Started with Plotly Streaming',\n",
+    "    'Getting Started with Plotly Streaming', name=\"Streaming with Subplots\",\n",
     "    title = 'Streaming in Subplots',\n",
     "    thumbnail='', language='python',\n",
     "    layout='user-guide', has_thumbnail='false') "
