added name into publisher

--- a/_posts/user_guide_python/python_streaming.ipynb
+++ b/_posts/user_guide_python/python_streaming.ipynb
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -825,20 +825,6 @@
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning:\n",
-      "\n",
-      "Your URL has more than 2 parts... are you sure?\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -851,7 +837,7 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'python_streaming', 'python/python-streaming//', 'Getting Started with Plotly Streaming',\n",
-    "    'Getting Started with Plotly Streaming',\n",
+    "    'Getting Started with Plotly Streaming', name='Getting Started with Streaming',\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
     "    thumbnail='http://images.plot.ly/plotly-documentation/thumbnail/streaming-thumb-square.gif', language='python',\n",
     "    layout='user-guide', has_thumbnail='true') "
