updating publisher parameters

--- a/_posts/user_guide_python/geo-streaming.ipynb
+++ b/_posts/user_guide_python/geo-streaming.ipynb
@@ -364,8 +364,8 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'geo-streaming', 'python/geo-streaming//', 'Streaming to a Map',\n",
-    "    'Getting Started with Plotly Streaming', name=\"Geo-Streaming\",\n",
-    "    title = 'Geo-Streaming in Plotly',\n",
+    "    'Streaming in Plotly with Python', name=\"Streaming to Maps\",\n",
+    "    title = 'Geo-Streaming with Plotly',\n",
     "    thumbnail='', language='python',\n",
     "    layout='user-guide', has_thumbnail='false') "
    ]
