--- a/_posts/user_guide_python/subplot-streaming.ipynb
+++ b/_posts/user_guide_python/subplot-streaming.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -302,6 +302,16 @@
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning: Your URL has more than 2 parts... are you sure?\n",
+      "  warnings.warn('Your URL has more than 2 parts... are you sure?')\n"
+     ]
     }
    ],
    "source": [
@@ -313,9 +323,9 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'subplot-streaming', 'python/subplot-streaming//', 'Streaming Two Types of Plots',\n",
-    "    'Getting Started with Plotly Streaming', name=\"Streaming with Subplots\",\n",
-    "    title = 'Streaming in Subplots',\n",
+    "    'subplot-streaming', 'python/subplot-streaming//', 'Streaming in Plotly',\n",
+    "    'Streaming in Plotly with Python', name=\"Streaming with Subplots\",\n",
+    "    title = 'Streaming in Subplots with Plotly',\n",
     "    thumbnail='', language='python',\n",
     "    layout='user-guide', has_thumbnail='false') "
    ]
