--- a/_posts/user_guide_python/multiple-trace-streaming.ipynb
+++ b/_posts/user_guide_python/multiple-trace-streaming.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -284,14 +284,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning:\n",
-      "\n",
-      "Your URL has more than 2 parts... are you sure?\n",
-      "\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning: Your URL has more than 2 parts... are you sure?\n",
+      "  warnings.warn('Your URL has more than 2 parts... are you sure?')\n"
      ]
     }
    ],
@@ -305,8 +301,8 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'multiple-trace-streaming', 'python/multiple-trace-streaming//', 'Streaming to Two Traces',\n",
-    "    'Getting Started with Plotly Streaming', name=\"Streaming to Multiple Traces\",\n",
-    "    title = 'Getting Started with Plotly Streaming',\n",
+    "    'Streaming in Plotly with Python', name=\"Streaming to Multiple Traces\",\n",
+    "    title = 'Streaming to Multiple Traces with Plotly',\n",
     "    thumbnail='', language='python',\n",
     "    layout='user-guide', has_thumbnail='false') "
    ]
