--- a/_posts/python/3d-scatter/3d_scatter.ipynb
+++ b/_posts/python/3d-scatter/3d_scatter.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "### 3D Scatter Plots in Python"
+    "## 3D Scatter Plots in Python"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -29,10 +29,10 @@
     {
      "data": {
       "text/plain": [
-       "'1.9.9'"
+       "'1.9.10'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,12 +46,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####3D SCATTER PLOT"
+    "#### 3D Scatter Plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -59,13 +59,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/13.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/2279.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,12 +130,15 @@
     "collapsed": true
    },
    "source": [
-    "#### 3D SCATTER PLOT WITH COLOR SCALING"
+    "\n",
+    "---\n",
+    "\n",
+    "### 3D Scatter Plot with Colorscaling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -143,13 +146,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/15.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/2281.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,13 +188,21 @@
     "    )\n",
     ")\n",
     "fig = go.Figure(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='3d-scatter-colorscale')\n",
-    "\n"
+    "py.iplot(fig, filename='3d-scatter-colorscale')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -224,17 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "Requirement already up-to-date: publisher in /anaconda/lib/python2.7/site-packages\r\n"
      ]
     }
    ],
@@ -253,6 +254,15 @@
     "    thumbnail='thumbnail/3d-scatter.jpg', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='3d_charts', order=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -271,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
